--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,29 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Weather
     </ion-title>
+      <ion-fab middle right #menu>
+          <button ion-fab><ion-icon name="menu"></ion-icon></button>
+        <ion-fab-list side="left">
+            <button ion-fab (click)="menu.close();addStation()"><ion-icon name="add"></ion-icon></button>
+            <button ion-fab (click)="menu.close();toggleEditView()"><ion-icon name="more"></ion-icon></button>
+        </ion-fab-list>
+      </ion-fab>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-card *ngFor="let station of stations">
+    <ion-card-header>
+        {{ station.location.city }}, {{ station.location.state }}
+    </ion-card-header>
+    <ion-card-content *ngIf="station.weather; else noWeatherData">
+    </ion-card-content>
+    <ng-template #noWeatherData>
+        <ion-card-content>
+            no weather data avalible
+        </ion-card-content>
+    </ng-template>
+  </ion-card>
 </ion-content>
