--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -18,6 +18,6 @@
 
 <ion-content padding>
   <ion-input [(ngModel)]="station.location.state" placeholder="State"></ion-input>
-  <ion-input [(ngModel)]="station.location.state" placeholder="City"></ion-input>
+  <ion-input [(ngModel)]="station.location.city" placeholder="City"></ion-input>
   <button ion-button full color="submit" (click)="submit()">Save</button>
 </ion-content>
